unpackaged/main/default/objects/OpportunityTeamMember/fields/Force_Invalid_User__c.field-meta.xml
<CustomField>
    <fullName>Force_Invalid_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Invalid User?</label>
    <type>Checkbox</type>
</CustomField>