unpackaged/main/default/objects/OpportunityTeamMember/fields/SE_Overlay_Percent__c.field-meta.xml
<CustomField>
    <fullName>SE_Overlay_Percent__c</fullName>
    <label>SE Overlay Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>