unpackaged/main/default/objects/OpportunityTeamMember/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Team</relationshipName>
    <type>Lookup</type>
</CustomField>